# mcp-dev-toolkit

./: .env.example  .gitignore  Makefile  README.md  auth.py  pyproject.toml  server.py  whitelist.example.json
.claude/: settings.local.json
tests/: test_database.py  test_filesystem.py  test_system.py
tools/: __init__.py  advanced.py  database.py  external.py  filesystem.py  prompts.py  resources.py  sampling.py  subscriptions.py  system.py
